# master-mind

./: .clang-format  AverageNumberOfTries.ods  CMakeLists.txt  README.md  master-mind.cpp
cmake/: Conan.cmake
scripts/: calculate_average_tries
source/: CMakeLists.txt  helpers.cpp  helpers.hpp  master-mind-cli.cpp  master-mind-solver.cpp  master-mind.hpp
source/solvers/: brute-force.cpp  knuth.cpp  knuth.hpp  naive.cpp  naive.hpp  optimal.cpp
src/: CMakeLists.txt  helpers.cpp  helpers.hpp  master-mind-cli.cpp  master-mind-solver.cpp  master-mind.cpp  master-mind.hpp
src/solvers/: brute-force.cpp  brute-force.hpp  knuth.cpp  knuth.hpp  naive.cpp  naive.hpp  optimal.cpp  optimal.hpp  solver.cpp  solver.hpp
test/: constexpr_tests.cpp  tests.cpp
tests/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
tools/: clang-format-all
